# hsa_update_server

./: .dockerignore  .gitignore  Dockerfile  api_docs.md  compose_local_settings_template.py  docker-compose-template.yml  docker_entrypoint.py  manage.py  pyproject.toml
api/: models.py  patch_utils.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial_squashed_0004_alter_release_hearthstone_version_and_more.py
api/tests/: test_api.py
hsa_update_server/: asgi.py  local_settings_template.py  settings.py  urls.py  wsgi.py
